--- a/styles/style.scss
+++ b/styles/style.scss
@@ -14,18 +14,20 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
+    background-blend-mode: multiply;
 }
 
 .container {
-    width: 78.5vw;
-    margin: auto;
+    // width: 78.5vw;
+    margin: auto 24px;
+    padding-bottom: 94px;
 }
 
 .header__container svg {
     /* width: 134px; */
-    margin: auto;
+    margin: 62px auto;
     display: block;
-    margin-top: 62px;
+
 }
 
 main {
@@ -56,7 +58,7 @@ p {
 
 .socials {
     display: flex;
-    margin: 33px  auto;
+    margin: 33px auto 0;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: baseline;
@@ -76,4 +78,57 @@ img.google {
 
 img.pocket {
     width: 77px;
+}
+
+input[type="submit"],
+label {
+    display: block;
+}
+
+input[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    background-color: #54E6AF;
+    border-radius: 20px;
+    border: none;
+    line-height: 28px;
+    font-size: 0.93rem;
+    color: #121725;
+    font-weight: 600;
+}
+
+input.submitDocs {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 20px;
+    line-height: 28px;
+    padding-left: 25px;
+    margin-bottom: 16px;
+}
+
+form {
+    margin-top: 48px;
+}
+
+@media screen and (min-width: 690px) {
+
+    .container {
+        margin: auto 39px;
+    }
+
+    .header__container svg {
+        margin-left: 0;
+        margin-top: 50px;
+    }
+
+    body {
+        background-blend-mode: normal;
+        background-size: 64%;
+        background-position: right top;
+    }
+
+    main {
+        width: 81.8%;
+    }
 }
