--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,7 @@ body {
   background-size: cover;
   color: white;
   background-blend-mode: multiply;
+  overflow-x: hidden;
 }
 
 .container {
@@ -132,9 +133,10 @@ form {
     background-blend-mode: normal;
     background-size: 64%;
     background-position: right top;
+    background-image: url("../assets/tablet/image-host.jpg");
   }
   main {
-    width: 94.7%;
+    width: 100%;
     top: 120px;
     background-color: #121725;
     display: -ms-grid;
@@ -182,7 +184,7 @@ form {
   .container::before {
     position: absolute;
     content: "";
-    width: 93vw;
+    width: 100vw;
     height: 244px;
     background-color: #121725;
     bottom: -180px;
@@ -190,6 +192,32 @@ form {
     background-image: url("../assets/desktop/bg-pattern-dots.svg");
     background-repeat: no-repeat;
     background-position: 0% 100%;
+  }
+}
+
+@media screen and (min-width: 980px) {
+  .container::before {
+    height: 180px;
+    bottom: -200px;
+  }
+}
+
+@media screen and (min-width: 1220px) {
+  body {
+    background-image: url("../assets/desktop/image-host.jpg");
+    background-position: right 135px;
+  }
+  .header__container svg {
+    margin: 102px auto 0 0;
+  }
+  main {
+    width: 60%;
+  }
+  .container {
+    margin: auto 165px;
+  }
+  .container::before {
+    background-position: 86% 0;
   }
 }
 /*# sourceMappingURL=style.css.map */
