feat: javascript data control - email must be provided

--- a/styles/style.css
+++ b/styles/style.css
@@ -121,6 +121,22 @@ form {
   position: relative;
 }
 
+span.errorMsg {
+  display: none;
+  position: relative;
+  top: -13px;
+  left: 21px;
+  color: red;
+}
+
+span.showError {
+  display: block;
+}
+
+footer {
+  display: none;
+}
+
 @media screen and (min-width: 690px) {
   .container {
     margin: auto 39px;
@@ -191,18 +207,24 @@ form {
     z-index: 1;
   }
   footer {
+    display: block;
     position: absolute;
     left: 0;
     width: 232px;
     bottom: -203px;
     z-index: 4;
   }
+  footer img {
+    width: 100%;
+    display: block;
+    margin: auto;
+  }
 }
 
 @media screen and (min-width: 980px) {
   .container::before {
     height: 180px;
-    bottom: -200px;
+    bottom: -203px;
   }
 }
 
@@ -220,14 +242,11 @@ form {
   .container {
     margin: auto 165px;
   }
-  .container::before {
-    background-position: 86% 0;
-  }
   footer {
     left: auto;
     right: -150px;
     width: 232px;
-    bottom: -38px;
+    bottom: -33px;
   }
 }
 /*# sourceMappingURL=style.css.map */
