--- a/styles/style.scss
+++ b/styles/style.scss
@@ -184,7 +184,9 @@ footer {
         width: 200px;
         right: 3px;
     }
-
+    input[type="submit"]:hover {
+        cursor: pointer;
+    }
     input.submitDocs {
         padding: 15px;
         background-color: #2C344B;
@@ -195,7 +197,9 @@ footer {
         width: 84.5%;
         margin-left: 0;
     }
-
+    span.errorMsg {       
+        top: 10px;       
+    }
 
     .container::before {
         position: absolute;
@@ -248,14 +252,12 @@ footer {
     }
 
     .container {
-        margin: auto 165px;
-      //  bottom: -130px;
+        margin: auto 165px;       
+    }   
+    .container::before {        
+        bottom: -150px;
     }
-   
-  //  .container::before {
-  //      background-position: 86% 0;
-  //  }
-
+  
     footer {
         left: auto;
         right: -150px;
@@ -263,4 +265,11 @@ footer {
         bottom: -33px;
     }
     
+}
+
+@media screen and (min-width: 1640px) {
+    .container {
+        width: 1400px;
+        margin: auto;
+    }
 }
